<resources>
    <string name="app_name">Pollster</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">La dirección electrónica es inválida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_main">Pollster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encuestador Pollster</string>
    <string name="nav_header_subtitle">i201611913@cibertec.edu.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración


    </string>

    <string name="menu1">Nueva Encuesta</string>
    <string name="menu2">Mis Encuestas</string>
    <string name="menu3">Diagrama</string>
    <string name="menu4">Menu 4</string>
    <string name="menu5">Usuario</string>
    <string name="menu6">Cerrar Sesión</string>

</resources>
