<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu1" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu2" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu3" />
       <!-- <item
            android:id="@+id/nav_menu4"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu4" /> -->
    </group>

    <item android:title="Salir">
        <menu>
            <!--<item
                android:id="@+id/nav_menu5"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu5" />-->
            <item
                android:id="@+id/nav_menu6"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu6" />
        </menu>
    </item>

</menu>
